--- a/index.html
+++ b/index.html
@@ -1,39 +1,29 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-
-	<meta charset="utf-8"/>
-
-	<meta name="theme-color" content="#303030">
+    <meta charset="UTF-8">
 	<meta name="msapplication-navbutton-color" content="#303030">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#303030">
-	
-	<!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
-	
+	<meta name="theme-color" content="#303030">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Simranjeet Singh</title>
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-
-
-	<link rel="icon" href="images/icon.ico">
-
-	<meta name="author" content="proram" />
-	<meta name="description" content="The official website of Simranjeet Singh. ">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Simranjeet Singh</title>
-
-
-	<!-- Stylesheets -->
+    
+    <link rel="icon" href="images/icon.ico">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet" title="main-css">
+    <link rel="stylesheet" href="css/styles.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
 </head>
 
-
 <body>
-
-	<!-- Begin Jumbotron -->
-	<div class=" jumbotron-main" id="home">
+    <div id="particles-js"></div>
+    <div id="main">
+        <div class=" jumbotron-main" id="home">
 		<div class="container center-vertically-holder" style="vertical-align: bottom; padding-top: 80px">
 			<div class="center-vertically">
 				<div id="scaleReveal" class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
@@ -48,10 +38,10 @@
 						  <span class="letters2">Singh</span>
 						</span>
 					</h1>
-				</div><!-- /.column -->
-			</div><!-- /.vertical center -->
+				</div>
+			</div>
 		</div>
-		<div class="container center-vertically-holder" style="padding-top: 60px">
+        <div class="container center-vertically-holder" style="padding-top: 60px">
 			<div class="row" id = "reld">
 				
 				<!--Github-->
@@ -109,8 +99,6 @@
 						</a>
 					</div>
 
-
-
 				<!--Instagram-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
 						<a href="https://www.instagram.com/smrnjeet_22" style="text-decoration:none;" target="_blank">
@@ -146,16 +134,13 @@
 					</div>
 
 				</div>
-		</div><!-- /.container -->
-	</div>
-
-
-<!--..........................-End Website Display Content..........................-->
-
-	<!-- Javascript Files -->
+            </div>
+        </div>
+    </div>
+    <!-- scripts -->
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-
-
 </body>
 
 </html>
