--- a/Resume.html
+++ b/Resume.html
@@ -32,11 +32,11 @@
 </head>
 
 <body>
-    <div class="topbar"><a>
+    <div class="topbar">
             <div class="topbar__logo"
-                style="background-image: url(images/SimranjeetSingh.svg)" sizes="900x100">
+                style="background-image: url(images/Resume.svg)">
             </div>
-        </a></div>
+        </div>
     <div class="resume">
         <div class="pdf-viewer" data-error-text="Failed to load resume" data-image-format="jpeg" data-ssid="A112Kl77M"
             data-version="42d0b7dd9e">
