--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Simranjeet Singh</title>
 
-	<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
+<!-- 	<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 	<link rel="icon" href="images/icon.ico">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -116,7 +116,8 @@
 							target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
-									<i class="cib-leetcode"></i>
+<!-- 									<i class="cib-leetcode"></i> -->
+									<i class="fa fa-code"></i>
 								</div>
 							</div>
 						</a>
