--- a/Ghost_anim/text.html
+++ b/Ghost_anim/text.html
@@ -18,13 +18,10 @@
         <li>E</li>
         <li>E</li>
         <li>T</li>
-        <li>~</li>
-        <li>S</li>
-        <li>I</li>
-        <li>N</li>
-        <li>G</li>
-        <li>H</li>
     </ul>
+    <div id="text">
+        <a href="#">Singh</a>
+    </div>
 </body>
 
 </html>
