bug fixes + added projects

--- a/index.html
+++ b/index.html
@@ -23,30 +23,32 @@
 <body>
 	<div id="particles-js"></div>
 	<div id="main">
-		<div class=" jumbotron-main" id="home">
+		<div class="jumbotron-main" id="home">
 			<div class="container center-vertically-holder" style="vertical-align: bottom; padding-top: 80px">
 				<div class="center-vertically">
 					<div id="scaleReveal" class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
 						<span class="big-logo">
-							<img src="images/Profile.jpg" height="200em" alt="Simranjeet Singh">
+							<a href="mailto:smrnjeet222@gmail.com" title="mail : smrnjeet222@gmail.com" style="text-decoration:none;">
+								<img src="images/Profile.jpg" height="200em" alt="Simranjeet Singh" >
+							</a>
 						</span>
-						<h1 class="ml9">
+						<h1 class="ml9" ><a = href="https://smrnjeet222.github.io/Visualisations" target="_blank">
 							<span class="text-wrapper">
 								<span class="letters">Simranjeet</span>
 							</span>
 							<span class="text-wrapper">
 								<span class="letters2">Singh</span>
 							</span>
-						</h1>
+						</a></h1>
 					</div>
 				</div>
 			</div>
-			<div class="container center-vertically-holder" style="padding-top: 60px">
+			<div class="container center-vertically-holder" style="padding-top: 70px; padding-bottom: 60px" >
 				<div class="row" id="reld">
 
 					<!--Github-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://github.com/smrnjeet222" style="text-decoration:none;" target="_blank">
+						<a href="https://github.com/smrnjeet222" title="Github" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-github"></i>
@@ -57,7 +59,7 @@
 
 					<!--LinkedIn-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.linkedin.com/in/smrnjeet222/" style="text-decoration:none;"
+						<a href="https://www.linkedin.com/in/smrnjeet222/" title="LinkedIn" style="text-decoration:none;"
 							target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
@@ -69,7 +71,7 @@
 
 					<!--HAckerRank-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.hackerrank.com/smrnjeet222" style="text-decoration:none;" target="_blank">
+						<a href="https://www.hackerrank.com/smrnjeet222" title="HackerRank" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-hackerrank"></i>
@@ -80,17 +82,18 @@
 
 					<!--Resume-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="Resume.html" style="text-decoration:none;" target="_blank">
+						<a href="Resume.html" title="Resume" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
-									<i class="fas fa-file-alt"></i>								</div>
+									<i class="fas fa-file-alt"></i>
+								</div>
 							</div>
 						</a>
 					</div>
 
 					<!--itch.io-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://smrnjeet-22.itch.io/" style="text-decoration:none;" target="_blank">
+						<a href="https://smrnjeet-22.itch.io/" title="Games/Art" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-itch-io"></i>
@@ -101,7 +104,7 @@
 
 					<!--Instagram-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.instagram.com/smrnjeet_22" style="text-decoration:none;" target="_blank">
+						<a href="https://www.instagram.com/smrnjeet_22" title="Instagram" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-instagram" aria-hidden="true"></i>
@@ -112,8 +115,7 @@
 
 					<!--LeetCode-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://leetcode.com/smrnjeet222/" style="text-decoration:none;"
-							target="_blank">
+						<a href="https://leetcode.com/smrnjeet222/" title="LeetCode" style="text-decoration:none; "target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 <!-- 									<i class="cib-leetcode"></i> -->
@@ -125,11 +127,11 @@
 
 
 					<!--Mail-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-12">
-						<a href="mailto:smrnjeet222@gmail.com" style="text-decoration:none;">
+					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+						<a href="https://smrnjeet222.github.io/Visualisations" title="Projects"  style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
-									<i class="fas fa-at"></i>
+									<i class="far fa-lightbulb"></i>
 								</div>
 							</div>
 						</a>
