--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Simranjeet Singh</title>
-
-<!-- 	<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css"> -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<!-- <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-	<link rel="icon" href="images/icon.ico">
+	<link rel="icon" href="images/icon.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
@@ -32,7 +32,7 @@
 								<img src="images/Profile.jpg" height="200em" alt="Simranjeet Singh" >
 							</a>
 						</span>
-						<h1 class="ml9" ><a = href="https://smrnjeet222.github.io/Visualisations" target="_blank">
+						<h1 class="ml9" ><a href="https://smrnjeet222.github.io/Visualisations" target="_blank">
 							<span class="text-wrapper">
 								<span class="letters">Simranjeet</span>
 							</span>
@@ -142,6 +142,7 @@
 		</div>
 	</div>
 	<!-- scripts -->
+	<script src="js/backHover.js"></script>
 	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
