loading bg quick

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<div id="particles-js"></div>
+	<div id="particles-js"><img style="display: none;" src="..//images/background.jpg" alt=""></div>
 	<div id="main">
 		<div class="jumbotron-main" id="home">
 			<div class="container center-vertically-holder" style="vertical-align: bottom; padding-top: 80px">
