--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 </head>
 
 <body>
-	<div id="particles-js"><img style="display: none;" src="..//images/background.jpg" alt=""></div>
+	<div id="particles-js"><img style=" 
+		/* display: none;    */
+		position: fixed;
+		background-size: cover;
+		filter: opacity(0.3);
+		width: 100%;
+		height: 100%;
+		z-index:-999999;
+		background-attachment: fixed;
+    	background-repeat: no-repeat;"
+		src="..//images/bg1.jpg" alt=""></div>
 	<div id="main">
 		<div class="jumbotron-main" id="home">
 			<div class="container center-vertically-holder" style="vertical-align: bottom; padding-top: 80px">
