--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<img src="images/Profile.jpg" height="200em" alt="Simranjeet Singh" >
 							</a>
 						</span>
-						<h1 class="ml9" ><a href="https://smrnjeet222.github.io/Visualisations" target="_blank">
+						<h1 class="ml9" ><a href="https://smrnjeet222.github.io/Visualisations" >
 							<span class="text-wrapper">
 								<span class="letters">Simranjeet</span>
 							</span>
