--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 					<!--Resume-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://resume.io/r/A112Kl77M" title="Resume" style="text-decoration:none;" target="_blank">
+						<a href="./Resume.html" title="Resume" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fas fa-file-alt"></i>
