--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 <!-- <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css"> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-	<link rel="icon" href="images/icon.png">
+	<link rel="icon" href="img/icon.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
@@ -29,10 +29,10 @@
 					<div id="scaleReveal" class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
 						<span class="big-logo">
 							<a href="mailto:smrnjeet222@gmail.com" title="mail : smrnjeet222@gmail.com" style="text-decoration:none;">
-								<img src="images/Profile.jpg" height="200em" alt="Simranjeet Singh" >
+								<img src="img/Profile.jpg" height="200em" alt="Simranjeet Singh" >
 							</a>
 						</span>
-						<h1 class="ml9" ><a href="https://smrnjeet222.github.io/Visualisations" >
+						<h1 class="ml9" ><a href="https://smrnjeet222.github.io/Projects/" >
 							<span class="text-wrapper">
 								<span class="letters">Simranjeet</span>
 							</span>
@@ -104,7 +104,7 @@
 
 					<!--Instagram-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.instagram.com/smrnjeet_22" title="Instagram" style="text-decoration:none;" target="_blank">
+						<a href="https://www.instagram.com/smrnjeet_22/" title="Instagram" style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-instagram" aria-hidden="true"></i>
@@ -126,9 +126,9 @@
 					</div>
 
 
-					<!--Mail-->
+					<!--Projects-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://smrnjeet222.github.io/Visualisations" title="Projects"  style="text-decoration:none;" target="_blank">
+						<a href="https://smrnjeet222.github.io/Projects/" title="Projects"  style="text-decoration:none;" target="_blank">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="far fa-lightbulb"></i>
