Responsive for Iphones/Ipad  (improved)

--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
 			</div>
 		</div>
 	</div>
+	<footer id="main-footer">
+		<p>Copyright &copy; 2020 by Smrnjeet</p>
+	</footer>
 	<!-- scripts -->
 	<script src="js/backHover.js"></script>
 	<script src="js/particles.js"></script>
