--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 					<!--Github-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://github.com/smrnjeet222" title="Github" style="text-decoration:none;" target="_blank">
+						<a href="https://github.com/smrnjeet222" title="Github" style="text-decoration:none;" >
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-github"></i>
@@ -60,7 +60,7 @@
 					<!--LinkedIn-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
 						<a href="https://www.linkedin.com/in/smrnjeet222/" title="LinkedIn" style="text-decoration:none;"
-							target="_blank">
+							>
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-linkedin"></i>
@@ -71,7 +71,7 @@
 
 					<!--HAckerRank-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.hackerrank.com/smrnjeet222" title="HackerRank" style="text-decoration:none;" target="_blank">
+						<a href="https://www.hackerrank.com/smrnjeet222" title="HackerRank" style="text-decoration:none;" >
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-hackerrank"></i>
@@ -82,7 +82,7 @@
 
 					<!--Resume-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="./Resume.html" title="Resume" style="text-decoration:none;" target="_blank">
+						<a href="./Resume.html" title="Resume" style="text-decoration:none;" >
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fas fa-file-alt"></i>
@@ -93,7 +93,7 @@
 
 					<!--itch.io-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://smrnjeet-22.itch.io/" title="Games/Art" style="text-decoration:none;" target="_blank">
+						<a href="https://smrnjeet-22.itch.io/" title="Games/Art" style="text-decoration:none;" >
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-itch-io"></i>
@@ -104,7 +104,7 @@
 
 					<!--Instagram-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.instagram.com/smrnjeet_22/" title="Instagram" style="text-decoration:none;" target="_blank">
+						<a href="https://www.instagram.com/smrnjeet_22/" title="Instagram" style="text-decoration:none;" >
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="fab fa-instagram" aria-hidden="true"></i>
@@ -115,7 +115,7 @@
 
 					<!--LeetCode-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://leetcode.com/smrnjeet222/" title="LeetCode" style="text-decoration:none; "target="_blank">
+						<a href="https://leetcode.com/smrnjeet222/" title="LeetCode" style="text-decoration:none; ">
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 <!-- 									<i class="cib-leetcode"></i> -->
@@ -128,7 +128,7 @@
 
 					<!--Projects-->
 					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://smrnjeet222.github.io/Projects/" title="Projects"  style="text-decoration:none;" target="_blank">
+						<a href="https://smrnjeet222.github.io/Projects/" title="Projects"  style="text-decoration:none;" >
 							<div class="col-center-block item ">
 								<div class="circle-hold">
 									<i class="far fa-lightbulb"></i>
