--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="icon" href="img/icon.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
+	<link id="theme" rel="stylesheet" type="text/css" href="css/styles.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </head>
@@ -144,10 +145,14 @@
 	<footer id="main-footer">
 		<p>Copyright &copy; 2020 by Smrnjeet</p>
 	</footer>
+
+	<button class="button" id="theme-toggle">Switch to light mode</button>
+
 	<!-- scripts -->
 	<script src="js/backHover.js"></script>
 	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/themeToogle.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
 
