--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<p>Copyright &copy; 2020 by Smrnjeet</p>
 	</footer>
 
-	<button class="button" id="theme-toggle">Switch to light mode</button>
+	<button class="button" id="theme-toggle"><span>Switch to light mode</span></button>
 
 	<!-- scripts -->
 	<script src="js/backHover.js"></script>
