--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
 	<link rel="icon" href="img/icon.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
-	<link id="theme" rel="stylesheet" type="text/css" href="css/styles.css">
+	<link id="theme" rel="stylesheet" type="text/css" href="">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </head>
 
 <body>
 	<div id="particles-js"></div>
+	
+	<div class="loader">
+	  <span></span>
+	  <span></span>
+	  <span></span>
+	</div> 
+
 	<div id="main">
 		<div class="jumbotron-main" id="home">
 			<div class="container center-vertically-holder" style="vertical-align: bottom; padding-top: 80px">
