--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="icon" href="img/icon.png">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css">
+	<link id = "load" rel="stylesheet" href="css/loader.css">
 	<link id="theme" rel="stylesheet" type="text/css" href="">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
@@ -159,6 +160,7 @@
 	<script src="js/backHover.js"></script>
 	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/loader.js"></script>
 	<script src="js/themeToogle.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </body>
