Disabled Background Hover for mobile

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
 								<img src="img/Profile.jpg" height="200em" alt="Simranjeet Singh" >
 							</a>
 						</span>
-						<h1 class="ml9" ><a href="https://smrnjeet222.github.io/Projects/" >
+						<h1 class="ml9" >
 							<span class="text-wrapper">
 								<span class="letters">Simranjeet</span>
 							</span>
 							<span class="text-wrapper">
 								<span class="letters2">Singh</span>
 							</span>
-						</a></h1>
+						</h1>
 					</div>
 				</div>
 			</div>
