--- a/index.html
+++ b/index.html
@@ -1,168 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="msapplication-navbutton-color" content="#303030" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#303030" />
+    <meta name="theme-color" content="#303030" />
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="msapplication-navbutton-color" content="#303030">
-	<meta name="apple-mobile-web-app-status-bar-style" content="#303030">
-	<meta name="theme-color" content="#303030">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Simranjeet Singh</title>
+    <link rel="stylesheet" href="css/loader.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    />
+    <link rel="icon" href="img/icon.png" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link id="theme" rel="stylesheet" type="text/css" href="" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  </head>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Simranjeet Singh</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<!-- <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css"> -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-	<link rel="icon" href="img/icon.png">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/styles.css">
-	<link id = "load" rel="stylesheet" href="css/loader.css">
-	<link id="theme" rel="stylesheet" type="text/css" href="">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <body>
+    <div id="particles-js"></div>
 
-</head>
+    <div class="loader">Loading</div>
 
-<body>
-	<div id="particles-js"></div>
-	
-	<div class="loader">
-	  <span></span>
-	  <span></span>
-	  <span></span>
-	</div> 
+    <div id="main">
+      <div class="jumbotron-main" id="home">
+        <div
+          class="container center-vertically-holder"
+          style="vertical-align: bottom; padding-top: 80px;"
+        >
+          <div class="center-vertically">
+            <div
+              id="scaleReveal"
+              class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center"
+            >
+              <span class="big-logo">
+                <a
+                  href="mailto:smrnjeet222@gmail.com"
+                  title="mail : smrnjeet222@gmail.com"
+                  style="text-decoration: none;"
+                >
+                  <img
+                    src="img/Profile.jpg"
+                    height="200em"
+                    alt="Simranjeet Singh"
+                  />
+                </a>
+              </span>
+              <h1 class="ml9">
+                <span class="text-wrapper">
+                  <span class="letters">Simranjeet</span>
+                </span>
+                <span class="text-wrapper">
+                  <span class="letters2">Singh</span>
+                </span>
+              </h1>
+            </div>
+          </div>
+        </div>
+        <div
+          class="container center-vertically-holder"
+          style="padding-top: 70px; padding-bottom: 60px;"
+        >
+          <div class="row" id="reld">
+            <!--Github-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://github.com/smrnjeet222"
+                title="Github"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="fab fa-github"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-	<div id="main">
-		<div class="jumbotron-main" id="home">
-			<div class="container center-vertically-holder" style="vertical-align: bottom; padding-top: 80px">
-				<div class="center-vertically">
-					<div id="scaleReveal" class="col-sm-8 col-sm-offset-2 col-lg-6 col-lg-offset-3 text-center">
-						<span class="big-logo">
-							<a href="mailto:smrnjeet222@gmail.com" title="mail : smrnjeet222@gmail.com" style="text-decoration:none;">
-								<img src="img/Profile.jpg" height="200em" alt="Simranjeet Singh" >
-							</a>
-						</span>
-						<h1 class="ml9" >
-							<span class="text-wrapper">
-								<span class="letters">Simranjeet</span>
-							</span>
-							<span class="text-wrapper">
-								<span class="letters2">Singh</span>
-							</span>
-						</h1>
-					</div>
-				</div>
-			</div>
-			<div class="container center-vertically-holder" style="padding-top: 70px; padding-bottom: 60px" >
-				<div class="row" id="reld">
+            <!--LinkedIn-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://www.linkedin.com/in/smrnjeet222/"
+                title="LinkedIn"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="fab fa-linkedin"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-					<!--Github-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://github.com/smrnjeet222" title="Github" style="text-decoration:none;" >
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="fab fa-github"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+            <!--HAckerRank-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://www.hackerrank.com/smrnjeet222"
+                title="HackerRank"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="fab fa-hackerrank"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-					<!--LinkedIn-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.linkedin.com/in/smrnjeet222/" title="LinkedIn" style="text-decoration:none;"
-							>
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="fab fa-linkedin"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+            <!--Resume-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="./Resume.html"
+                title="Resume"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="fas fa-file-alt"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-					<!--HAckerRank-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.hackerrank.com/smrnjeet222" title="HackerRank" style="text-decoration:none;" >
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="fab fa-hackerrank"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+            <!--itch.io-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://smrnjeet-22.itch.io/"
+                title="Games/Art"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="fab fa-itch-io"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-					<!--Resume-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="./Resume.html" title="Resume" style="text-decoration:none;" >
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="fas fa-file-alt"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+            <!--Instagram-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://www.instagram.com/smrnjeet_22/"
+                title="Instagram"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="fab fa-instagram" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-					<!--itch.io-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://smrnjeet-22.itch.io/" title="Games/Art" style="text-decoration:none;" >
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="fab fa-itch-io"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+            <!--LeetCode-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://leetcode.com/smrnjeet222/"
+                title="LeetCode"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <!-- 									<i class="cib-leetcode"></i> -->
+                    <i class="fa fa-code"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-					<!--Instagram-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://www.instagram.com/smrnjeet_22/" title="Instagram" style="text-decoration:none;" >
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="fab fa-instagram" aria-hidden="true"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+            <!--Projects-->
+            <div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
+              <a
+                href="https://smrnjeet222.github.io/Projects/"
+                title="Projects"
+                style="text-decoration: none;"
+              >
+                <div class="col-center-block item">
+                  <div class="circle-hold">
+                    <i class="far fa-lightbulb"></i>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer id="main-footer">
+      <p>Copyright &copy; 2020 by Smrnjeet</p>
+    </footer>
 
-					<!--LeetCode-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://leetcode.com/smrnjeet222/" title="LeetCode" style="text-decoration:none; ">
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-<!-- 									<i class="cib-leetcode"></i> -->
-									<i class="fa fa-code"></i>
-								</div>
-							</div>
-						</a>
-					</div>
+    <button class="button" id="theme-toggle">
+      <span>Switch to light mode</span>
+    </button>
 
-
-					<!--Projects-->
-					<div class="col-lg-3 col-xs-6 col-sm-6 col-md-6">
-						<a href="https://smrnjeet222.github.io/Projects/" title="Projects"  style="text-decoration:none;" >
-							<div class="col-center-block item ">
-								<div class="circle-hold">
-									<i class="far fa-lightbulb"></i>
-								</div>
-							</div>
-						</a>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-	<footer id="main-footer">
-		<p>Copyright &copy; 2020 by Smrnjeet</p>
-	</footer>
-
-	<button class="button" id="theme-toggle"><span>Switch to light mode</span></button>
-
-	<!-- scripts -->
-	<script src="js/backHover.js"></script>
-	<script src="js/particles.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/loader.js"></script>
-	<script src="js/themeToogle.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
-</body>
-
+    <!-- scripts -->
+    <script src="js/backHover.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/loader.js"></script>
+    <script src="js/themeToogle.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+  </body>
 </html>
