--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             >
               <span class="big-logo">
                 <a
-                  href="mailto:smrnjeet222@gmail.com"
-                  title="mail : smrnjeet222@gmail.com"
+                  href="https://smrnjeet222.github.io/CleanPortfolio/"
+                  title="Clean Page"
                   style="text-decoration: none;"
                 >
                   <img
