--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="nav-bar">
-      <a href="https://smrnjeet222.github.io/">
+      <a href="https://smrnjeet222.github.io/Portfolio/">
         <img class="logo" src="svgs/home.png" alt="logo" />
       </a>
       <nav>
@@ -32,7 +32,7 @@
             <div class="text">ABOUT</div>
           </div></a
         >
-        <a href="https://github.com/smrnjeet222#" class="link"
+        <a href="https://github.com/smrnjeet222" class="link"
           ><i class="fas fa-cogs fa-2x"></i>
           <div class="overlay">
             <div class="text">SKILLS</div>
@@ -69,7 +69,7 @@
         </li>
       </ul>
     </div>
-    <a class="bkmrk" href="https://smrnjeet222.github.io/Resume.html">
+    <a class="bkmrk" href="/Resume.html">
       <img src="svgs/blogdark.png" alt="Resume" />
       <span class="folded-corner"></span>
     </a>
